--- a/site/index.html
+++ b/site/index.html
@@ -3,6 +3,6 @@
         <title>Hello coursera!</title>
     </head>
     <body>
-        <h1>Hello coursera!</h1>
+        <h1>Hello coursera! it's agreat course</h1>
     </body>
 </html>
